--- a/eCommerce/package.json
+++ b/eCommerce/package.json
@@ -26,6 +26,9 @@
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.7.0",
     "ngx-bootstrap-icons": "^1.9.2",
+    "ngx-owl-carousel": "^2.0.7",
+    "ngx-owl-carousel-o": "^16.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
