--- a/Server Side/package.json
+++ b/Server Side/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0"
