--- a/Server Side/package.json
+++ b/Server Side/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.12.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
