--- a/Server Side/package.json
+++ b/Server Side/package.json
@@ -14,6 +14,7 @@
     "ajv": "^8.12.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
