--- a/ClientSide/package.json
+++ b/ClientSide/package.json
@@ -30,6 +30,7 @@
     "ngx-bootstrap-icons": "^1.9.2",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^16.0.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-scrollbar": "^13.0.3",
     "popper.js": "^1.16.1",
