--- a/ClientSide/package.json
+++ b/ClientSide/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "jquery": "^3.7.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap-icons": "^1.9.2",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^16.0.0",
